Fix z-index

--- a/css/jquery-tour.css
+++ b/css/jquery-tour.css
@@ -59,7 +59,7 @@
 .jquery-tour-tooltip {
     position: absolute;
     width: 300px;
-    z-index: 999;
+    z-index: 9999;
     border: 1px solid #333;
     border-radius: 5px;
     padding: 15px;
@@ -151,5 +151,5 @@
     top: 0px;
     left: 0px;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 100;
+    z-index: 9998;
 }
